<resources>
    <string name="app_name">MutualMonitor</string>

    <!--    registering and loggin in-->

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name ="notMemberYet">Not a member yet? Sign up</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="AlreadyRegistered">Already registered? Click here to Sign in</string>


    <!--    registering and loggin in-->

    <!--    Radiobuttons-->
    <string name="normalButton">Normal</string>
    <string name="suspiciousButton">Suspicious</string>
    <string name="verySuspiciousButton">Very Suspicious</string>
    <string name="none">None</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="riskLevel">Risk Level</string>
    <string name="Surety">Confidence</string>
    <!--    Radiobuttons-->

    <!--    Notification-->
    <string name="temporary">Temporary</string>
    <string name="activitybasedNotification">Reminding users</string>
    <string name="pleaseCheck">Please Check,\u0020</string>
    <string name="whoFinished">\u0020-san just finished\u0020</string>
    <string name="activity">\u0020activity.</string>
    <string name="recurringnotificationHeader">Please check recent activity of the elderly.</string>
    <string name="recurringnotificationChannel">Recurring Notification</string>
    <string name="contantNotificationDot">Contant Notification dot</string>


    <!--    Notification-->

    <!--Warnings-->
    <string name="enterEmailCorrectly">Enter email address please!</string>
    <string name="enterPasswordCorrectly">Enter password please!</string>
    <string name="enterDetailsCorrectly">Please enter the details correctly!</string>
    <string name="missedWhileReporting">Seems like you have missed selecting!! </string>
    <string name="pleaseTryAgain">Please try again with proper credentials</string>
    <!--Warnings-->

    <!--    Text in cards-->
    <string name="sleep">Sleep</string>
    <string name="breakfast">Breakfast</string>
    <string name="medicine">Medicine</string>
    <string name="lunch">Lunch</string>
    <string name= "tvpc">TV/PC</string>
    <string name="dinner">Dinner</string>
    <string name="shower">Shower</string>
    <string name="overall">Overall</string>
    <string name="OverallQuestion">What do you think is the overall status of the elderly?</string>
    <string name="currentStatus">Current Status</string>
    <string name="endtime">End Time</string>
    <string name="starttime">Start Time</string>
    <string name="duration">Duration</string>
    <string name="minutes">\u0020Minutes</string>
    <string name="activityComplete">Complete</string>
    <string name="activityIncomplete">Incomplete</string>
    <string name="activityOngoing">Ongoing</string>
    <string name="notTaken">Not Taken</string>
    <string name="missed">Missed</string>
    <string name="hrs">\u0020Hrs</string>
    <string name="mins">\u0020Min</string>
    <string name = "lastResponse">Your last Response</string>
    <string name = "lastResponseTime">Your last Response Time</string>
    <string name="overallResponsenotReportedYet">Not reported yet</string>
    <string name="risk">\u0020 Risk</string>
    <string name="confidence">\u0020 Confidence</string>

    <!--    Text in cards-->

    <!--    Target names-->
    <string name="target1">Taro</string>
    <string name="target2">Watanabe</string>
    <string name="target3">Yamazaki</string>
    <!--    Target names-->

    <!--    Miscellaneous-->
    <string name="SelectTarget">Select</string>
    <string name="activity_report">Activity Report - "  "</string>
    <string name="submitReport">Submit Report</string>
    <string name="todo">TODO</string>
    <string name="Goback">Go Back</string>

    <!--    Miscellaneous-->

</resources>
