<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/appTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/buttonText"
            android:background="@color/appTheme"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="44sp"
            android:textAlignment="center"
            android:fontFamily="@font/textfont"
            android:layout_gravity="center"
            android:gravity="center">

        </TextView>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">

        </Space>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="4dp"
            android:background="@color/appTheme"
            android:src="@drawable/icon">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/EnterEmail"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/EnterPassword"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonsignin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"

            android:background="#954C4C"
            android:onClick="signin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/buttonText"
            android:textSize="25sp"

            android:text="@string/sign_in" />

        <Button
            android:id="@+id/signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:onClick="signup"
            android:backgroundTint="@android:color/background_light"
            android:textColor="@color/appTheme"
            tools:backgroundTint="@color/common_google_signin_btn_text_dark_default"
            android:text="@string/notMemberYet" />



    </LinearLayout>


</LinearLayout>
