<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context="com.mutualmonitor.testing.MainActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:orientation="horizontal"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="@color/appTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="2dp"
            android:textColor="@color/buttonText"
            android:background="@color/appTheme"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textSize="44sp"
            android:textAlignment="center"
            android:fontFamily="@font/textfont"
            android:layout_gravity="center"
            android:gravity="center">

        </TextView>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1">

        </Space>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="4dp"
            android:background="@color/appTheme"
            android:src="@drawable/icon">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

    <Button
        android:id="@+id/signin"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/appTheme"
        android:text="@string/sign_in"
        android:onClick="signin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/buttonText"
        android:textSize="30sp"
        android:fontFamily="sans-serif"
        tools:ignore="OnClick" />


    <Button
        android:id="@+id/signup"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/appTheme"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:onClick="signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/buttonText"
        android:textSize="30sp"
        tools:ignore="OnClick" />

    </LinearLayout>
</RelativeLayout>